examples/diagnostics/errors/module_path_mismatch_import.flx
import Modules.Data.List

print(Modules.Data.List.value());
